--- a/vr/aframe-test/index7.html
+++ b/vr/aframe-test/index7.html
@@ -20,7 +20,7 @@
         <a-asset-item id="potato-mtl" src="img/potatoes.mtl"></a-asset-item>
         <a-asset-item id="monkey-obj" src="img/Monkey.obj"></a-asset-item>
         <a-asset-item id="balloons-obj" src="img/ObjBalloons.obj"></a-asset-item>
-        <a-asset-item id="man-obj" src="img/autumn_casualman_04_lowpoly2k.obj"></a-asset-item>
+        <a-asset-item id="man-obj" src="img/autumn_casualman_04_lowpoly2k.OBJ"></a-asset-item>
         <a-asset-item id="pc-obj" src="img/lpc1.obj"></a-asset-item>
         <a-mixin id="cubewall" material="src: #cube" geometry="primitive: box; depth: 1.5; height: 1.5; width: 0.10; color: #eee"></a-mixin>
         <a-mixin id="cubelongwall" material="src: #cube" geometry="primitive: box; depth: 7.5; height: 1.5; width: 0.10; color: #eee"></a-mixin>
