--- a/js/p5/superbasic/index.html
+++ b/js/p5/superbasic/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
-    <script type="text/javascript" src="js/p5.min.js"></script>
-    <script type="text/javascript" src="js/sketch.js"></script>
+    <title>P5 Index</title>
   </head>
   <body>
-  
+  <p>
+    <a href="basics.html">Basics</a>
+  </p>
+  <p>
+    <a href="robot.html">Robot Exercise</a>
+  </p>
   </body>
 </html>
