Basic bot build

--- a/js/p5/superbasic/index.html
+++ b/js/p5/superbasic/index.html
@@ -5,11 +5,14 @@
     <title>P5 Index</title>
   </head>
   <body>
-  <p>
-    <a href="basics.html">Basics</a>
-  </p>
-  <p>
-    <a href="robot.html">Robot Exercise</a>
-  </p>
+    <p>
+      <b><a href="../">Up one.</a></b>
+    </p>
+    <p>
+      <a href="basics.html">Basics</a>
+    </p>
+    <p>
+      <a href="robot.html">Robot Exercise</a>
+    </p>
   </body>
 </html>
