--- a/vr/web-ar/index.html
+++ b/vr/web-ar/index.html
@@ -1,5 +1,6 @@
 <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<script>THREEx.ArToolkitContext.baseURL = 'https://rawgit.com/jeromeetienne/ar.js/master/three.js'</script>
 <body style='margin: 0px; overflow: hidden;'>
     <a-scene embedded artoolkit='sourceType: webcam;'>
         <a-box position='0 0 0.5' material='opacity: 0.5;'></a-box>
