--- a/vr/web-ar/index.html
+++ b/vr/web-ar/index.html
@@ -4,7 +4,8 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='trackingMethod: best;'>
       <a-anchor hit-testing-enabled='true'>
-   		<a-box position='0 0.5 0' material='opacity: 0.75;' height='4'></a-box>
+   		<a-box position='0 0.5 0' material='opacity: 1;' height='2.5'></a-box>
+          <a-ring color='teal' radius-inner='1' radius-outer='2'></a-ring>
       </a-anchor>
 		<a-camera-static/>
 	</a-scene>
