--- a/vr/web-ar/index.html
+++ b/vr/web-ar/index.html
@@ -3,9 +3,9 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='trackingMethod: best;'>
-      <a-anchor hit-testing-enabled='true'>
+      <a-anchor>
    		<a-box position='0 0.5 0' material='opacity: 1;' height='2.5'></a-box>
-          <a-ring color='teal' radius-inner='1' radius-outer='2'></a-ring>
+          <a-ring position='0 0.5 0' color='teal' radius-inner='1' radius-outer='2'></a-ring>
       </a-anchor>
 		<a-camera-static/>
 	</a-scene>
