--- a/vr/web-ar/index.html
+++ b/vr/web-ar/index.html
@@ -4,8 +4,8 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='trackingMethod: best;'>
       <a-anchor>
-   		<a-box position='0 0.5 0' material='opacity: 1;' height='2.5'></a-box>
-          <a-ring position='0 0.5 0' color='teal' radius-inner='1' radius-outer='2'></a-ring>
+   		<a-box position='0 0.5 0' material='opacity: 1;' height='1.5'></a-box>
+          <a-ring position='0 0.5 0' color='teal' radius-inner='.5' radius-outer='.5'></a-ring>
       </a-anchor>
 		<a-camera-static/>
 	</a-scene>
