Camera updated again

--- a/vr/web-ar/index.html
+++ b/vr/web-ar/index.html
@@ -7,6 +7,6 @@
    		<a-box position='0 0.5 0' material='opacity: 1;' height='1.5'></a-box>
           <a-ring position='0 0.5 0' color='teal' radius-inner='.5' radius-outer='.5'></a-ring>
       </a-anchor>
-		<a-marker-camera preset='hiro'/></a-marker-camera>
+		<a-camera-static/>
 	</a-scene>
 </body>
