--- a/vr/web-ar/index.html
+++ b/vr/web-ar/index.html
@@ -4,8 +4,8 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='trackingMethod: best;'>
       <a-anchor>
-   		<a-box position='0 0.5 0' material='opacity: 1;' height='1' width='1' depth='1'></a-box>
-          <a-ring position='.5 0.5 0' color='teal' radius-inner='1.5' radius-outer='1.5'></a-ring>
+   		<!--<a-box position='0 0.5 0' material='opacity: 1;' height='1' width='1' depth='1'></a-box> -->
+          <a-torus-knot position='0 0.5 0' color='teal'></a-torus-knot>
       </a-anchor>
 		<a-camera-static/>
 	</a-scene>
