Web AR works this time

--- a/vr/web-ar/index.html
+++ b/vr/web-ar/index.html
@@ -5,7 +5,8 @@
 	<a-scene embedded arjs='trackingMethod: best;'>
       <a-anchor>
    		<!--<a-box position='0 0.5 0' material='opacity: 1;' height='1' width='1' depth='1'></a-box> -->
-          <a-torus-knot position='0 0.5 0' color='teal'></a-torus-knot>
+          <a-torus-knot position='0 1.5 0' rotation='-90 0 0' color='teal' radius='.5' radius-tubular='0.08' height='1' q='5'></a-torus-knot>
+
       </a-anchor>
 		<a-camera-static/>
 	</a-scene>
