--- a/js/webaudio/index.html
+++ b/js/webaudio/index.html
@@ -83,6 +83,17 @@
 				<div id="purDial"></div>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-md-offset-4 col-md-1">
+				<div id="pinButton"></div>
+			</div>
+			<div class="col-md-1 text-center">
+				<br /><span id="pinDisplay">??</span>
+			</div>
+			<div class="col-md-1">
+				<div id="pinDial"></div>
+			</div>
+		</div>
 	</div>
 
     <script src="app.js"></script>
