Added some pizzazz and SCSS

--- a/js/animejs/surprise/index.html
+++ b/js/animejs/surprise/index.html
@@ -10,15 +10,41 @@
     <div class="container">
       <div id="cssSelector">
         <div class="line">
-          <div class="maincircle el"></div>
-          <div class="circle begin el"></div>
-          <div class="circle begincont el"></div>
-          <div class="circle circ2 el"></div>
-          <div class="circle circ2cont el"></div>
+          <svg class="heart origheart el" viewBox="0 0 32 29.6">
+            <path fill="none" stroke="#fff" d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2
+          	c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"/>
+          </svg>
+          <svg class="heart fillheart el" viewBox="0 0 32 29.6">
+            <path fill="#B60F0B" stroke="none" d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2
+          	c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"/>
+          </svg>
+          <div class="circle circ1 orig el"></div>
+          <div class="circle circ1 circcont el"></div>
+          <div class="circle circ2 orig el"></div>
+          <div class="circle circ2 circcont el"></div>
+          <div class="circle circ3 orig el"></div>
+          <div class="circle circ3 circcont el"></div>
+          <div class="circle circ4 orig el"></div>
+          <div class="circle circ4 circcont el"></div>
         </div>
       </div>
       <div class="flextest">
         <div class="text el">You're the<br />HTML<br />to my<br />CSS</div>
+      </div>
+      <div class="testsuite">
+
+        <div class="testing spot1">
+          1
+        </div>
+        <div class="testing spot2">
+          2
+        </div>
+        <div class="testing spot3">
+          3
+        </div>
+        <div class="testing spot4">
+          4
+        </div>
       </div>
       </div>
     </div>
