More bubbles and font switch

--- a/js/animejs/surprise/index.html
+++ b/js/animejs/surprise/index.html
@@ -26,11 +26,20 @@
           <div class="circle circ3 circcont el"></div>
           <div class="circle circ4 orig el"></div>
           <div class="circle circ4 circcont el"></div>
+          <div class="circle circ5 orig el"></div>
+          <div class="circle circ5 circcont el"></div>
+          <div class="circle circ6 orig el"></div>
+          <div class="circle circ6 circcont el"></div>
+          <div class="circle circ7 orig el"></div>
+          <div class="circle circ7 circcont el"></div>
+          <div class="circle circ8 orig el"></div>
+          <div class="circle circ8 circcont el"></div>
         </div>
       </div>
       <div class="flextest">
-        <div class="text el">You're the<br />HTML<br />to my<br />CSS</div>
+        <div class="text el">You're the<br /><span>HTML</span><br />to my<br /><span>CSS</span></div>
       </div>
+      <!--
       <div class="testsuite">
 
         <div class="testing spot1">
@@ -46,6 +55,7 @@
           4
         </div>
       </div>
+      -->
       </div>
     </div>
     <script src="anime.min.js"></script>
