--- a/js/nodejs/lynpractice/mainproject/index.html
+++ b/js/nodejs/lynpractice/mainproject/index.html
@@ -3,13 +3,16 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="/socket.io/socket.io.js"></script>
 
 <div class="container">
     <br />
     <div class="jumbotron">
         <h1 class="display-4">Send Message</h1>
         <br />
-        <input class="form-control" placeholder="Name" />
+        <input id="name" class="form-control" placeholder="Name" />
+        <br />
+        <textarea id="message" class="form-control" placeholder="Message"></textarea>
         <br />
         <button id="send" class="btn btn-success">Send</button>
     </div>
@@ -18,21 +21,29 @@
     </div>
 </div>
 <script>
+    var socket = io()
     $(() => {
         $("#send").click(()=>{
-            addMessages({name: 'Tim', message: "Hello"})
+            var message = {name: $("#name").val(), message: $("#message").val()}
+            postMessage(message)
         })
         getMessages()
     })
 
-    function addMessages(message) {
+    socket.on('message', addMessage)
+
+    function addMessage(message) {
         $("#messages").append(`<h4> ${message.name} </h4> <p>
              ${message.message} </p>`)
     }
 
     function getMessages() {
         $.get('http://localhost:3000/messages', (data) => {
-            data.forEach(addMessages);
+            data.forEach(addMessage);
         })
+    }
+
+    function postMessage(message) {
+        $.post('http://localhost:3000/messages', message)
     }
 </script>
