Made the button names predicate on the notes, not the colors. Streamlined new object creation.

--- a/js/webaudio/index.html
+++ b/js/webaudio/index.html
@@ -19,79 +19,79 @@
 		</div>
 		<div class="row">
 			<div class="col-md-offset-4 col-md-1">
-				<div id="redButton"></div>
+				<div id="AButton"></div>
 			</div>
 			<div class="col-md-1 text-center">
-				<br /><span id="redDisplay">??</span>
+				<br /><span id="ADisplay">??</span>
 			</div>
 			<div class="col-md-1">
-				<div id="redDial"></div>
+				<div id="ADial"></div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-offset-4 col-md-1">
-				<div id="oraButton"></div>
+				<div id="BButton"></div>
 			</div>
 			<div class="col-md-1 text-center">
-				<br /><span id="oraDisplay">??</span>
+				<br /><span id="BDisplay">??</span>
 			</div>
 			<div class="col-md-1">
-				<div id="oraDial"></div>
+				<div id="BDial"></div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-offset-4 col-md-1">
-				<div id="yelButton"></div>
+				<div id="CButton"></div>
 			</div>
 			<div class="col-md-1 text-center">
-				<br /><span id="yelDisplay">??</span>
+				<br /><span id="CDisplay">??</span>
 			</div>
 			<div class="col-md-1">
-				<div id="yelDial"></div>
+				<div id="CDial"></div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-offset-4 col-md-1">
-				<div id="greButton"></div>
+				<div id="DButton"></div>
 			</div>
 			<div class="col-md-1 text-center">
-				<br /><span id="greDisplay">??</span>
+				<br /><span id="DDisplay">??</span>
 			</div>
 			<div class="col-md-1">
-				<div id="greDial"></div>
+				<div id="DDial"></div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-offset-4 col-md-1">
-				<div id="bluButton"></div>
+				<div id="EButton"></div>
 			</div>
 			<div class="col-md-1 text-center">
-				<br /><span id="bluDisplay">??</span>
+				<br /><span id="EDisplay">??</span>
 			</div>
 			<div class="col-md-1">
-				<div id="bluDial"></div>
+				<div id="EDial"></div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-offset-4 col-md-1">
-				<div id="purButton"></div>
+				<div id="FButton"></div>
 			</div>
 			<div class="col-md-1 text-center">
-				<br /><span id="purDisplay">??</span>
+				<br /><span id="FDisplay">??</span>
 			</div>
 			<div class="col-md-1">
-				<div id="purDial"></div>
+				<div id="FDial"></div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-offset-4 col-md-1">
-				<div id="pinButton"></div>
+				<div id="GButton"></div>
 			</div>
 			<div class="col-md-1 text-center">
-				<br /><span id="pinDisplay">??</span>
+				<br /><span id="GDisplay">??</span>
 			</div>
 			<div class="col-md-1">
-				<div id="pinDial"></div>
+				<div id="GDial"></div>
 			</div>
 		</div>
 	</div>
